# microseg-vision

./: .gitignore  CHANGELOG.md  LICENSE  Makefile  README.md  pyproject.toml
.github/workflows/: ci.yml  coverage.yml
config/: unet_example.yaml
configs/: unet_example.yaml
scripts/: prepare_kvasir.py
src/microseg/: __init__.py  data.py  infer.py  metrics.py  models.py  train.py  transform.py  transforms.py
tests/: test_import.py
